2014-08-07  Benjamin Poulain  <bpoulain@apple.com>

        Get rid of INPUT_SPEECH
        https://bugs.webkit.org/show_bug.cgi?id=135672

        Reviewed by Andreas Kling.

        * Configurations/FeatureDefines.xcconfig:

2014-08-07  Mark Hahnenberg  <mhahnenberg@apple.com>

        for-in is failing fast/dom/dataset-xhtml.xhtml and dataset.html tests
        https://bugs.webkit.org/show_bug.cgi?id=135681

        Reviewed by Filip Pizlo.

        * runtime/Structure.cpp:
        (JSC::Structure::canCacheGenericPropertyNameEnumerator): We were checking the entire 
        prototype chain for overridesGetPropertyNames, but we were neglecting to check the 
        base object's Structure. D'oh!

2014-08-06  Mark Lam  <mark.lam@apple.com>

        Gardening: fix for build failure on EFL bots.

        Not reviewed.

        * runtime/EnumerationMode.h:
        (JSC::shouldIncludeJSObjectPropertyNames):
        (JSC::modeThatSkipsJSObject):
        * runtime/JSCell.cpp:
        (JSC::JSCell::getEnumerableLength):
        * runtime/JSCell.h:

2014-08-06  Dean Jackson  <dino@apple.com>

        ENABLE_CSS_TRANSFORMS_ANIMATIONS_UNPREFIXED is not used anywhere. Remove it.
        https://bugs.webkit.org/show_bug.cgi?id=135675

        Reviewed by Sam Weinig.

        * Configurations/FeatureDefines.xcconfig:

2014-08-06  Wenson Hsieh  <wenson_hsieh@apple.com>

        Implement parsing for CSS scroll snap points
        https://bugs.webkit.org/show_bug.cgi?id=134301

        Reviewed by Dean Jackson.

        * Configurations/FeatureDefines.xcconfig: Added ENABLE_CSS_SCROLL_SNAP

2014-08-06  Mark Lam  <mark.lam@apple.com>

        Gardening: fix for build failure on GTK bots.

        Not reviewed.

        * runtime/FunctionHasExecutedCache.cpp:
        - #include <limits.h> for UINT_MAX's definition.

2014-08-06  Mark Lam  <mark.lam@apple.com>

        Gardening: fix for build failure on EFL bots.

        Not reviewed.

        * jit/JITInlines.h: